"cambiato socket in uwsgi"

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,7 +10,7 @@ module = general_template1.wsgi:application
 master = true            # Enable master process mode
 processes = 4            # Number of worker processes to spawn
 
-socket = /tmp/myproject.sock
+socket = /tmp/general_template1.sock
                          # UNIX socket file to communicate with the web server
                          # This can be used instead of a network socket for communication
 
