"cambiato uswgi in general_template1

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,7 +3,7 @@ http-timeout = 86400     # Maximum time (in seconds) to wait for HTTP requests
 chdir = /home/mauro/django-project/django_general_template2
                          # Change working directory to the specified path
 
-module = django_general_template1.wsgi:application
+module = general_template1.wsgi:application
                          # Specifies the Python WSGI module that serves your Django application
                          # Format: <module_path>:<application_object>
 
